Add a bunch of stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-nav [title]="title">
-  <div>
-    {{_host()}}
-    {{_port()}}
-  </div>
-<!--  <app-dashboard></app-dashboard>-->
+  <router-outlet></router-outlet>
 </app-nav>
