--- a/src/app/pages/debug/debug.component.html
+++ b/src/app/pages/debug/debug.component.html
@@ -6,9 +6,20 @@
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="getData()">Fetch Data</button>
   </form>
-  @if (fetchedData.mappedData && fetchedData.sourceData) {
 
-    <mat-grid-list cols="2" rowHeight="500" gutterSize="35">
+  <div>
+    <mat-form-field>
+      <input matInput placeholder="Filter json" [ngModel]="filter | async" (ngModelChange)="filterData($event)">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Search json" [ngModel]="search | async" (ngModelChange)="searchData($event)">
+    </mat-form-field>
+  </div>
+
+
+  @if (fetchedData && fetchedData.mappedData && fetchedData.sourceData) {
+
+    <mat-grid-list cols="2" rowHeight="1000" gutterSize="35">
       <mat-grid-tile colspan="1" rowspan="1">
         <mat-card class="data-card">
           <mat-card-header>
@@ -16,7 +27,7 @@
           </mat-card-header>
           <mat-card-content>
 
-            <pre>{{ fetchedData.sourceData }}</pre>
+            <app-json-viewer [json]="fetchedData.sourceData" [filter]="filter" [search]="search"></app-json-viewer>
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
@@ -26,8 +37,7 @@
             <mat-card-title>Mapped Data</mat-card-title>
           </mat-card-header>
           <mat-card-content>
-
-            <pre>{{ fetchedData.mappedData}}</pre>
+            <app-json-viewer [json]="fetchedData.mappedData" [filter]="filter" [search]="search"></app-json-viewer>
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
