Styling and adjusted search to use regex

--- a/src/app/pages/debug/debug.component.html
+++ b/src/app/pages/debug/debug.component.html
@@ -1,46 +1,39 @@
 <div class="grid-container">
   <h1>Data-debugger</h1>
-  <form #debugForm="ngForm">
+  <div class="filter-row">
     <mat-form-field>
       <input matInput placeholder="Enter UUID" name="url" [(ngModel)]="model.uid" required>
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="getData()">Fetch Data</button>
-  </form>
-
-  <div>
+    <button mat-raised-button class="search-button" color="primary" (click)="getData()">Fetch Data</button>
     <mat-form-field>
-      <input matInput placeholder="Filter json" [ngModel]="filter | async" (ngModelChange)="filterData($event)">
+      <input matInput placeholder="Filter json" [ngModel]="filter | async" (ngModelChange)="filterData($event)" [disabled]="!fetchedData">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Search json" [ngModel]="search | async" (ngModelChange)="searchData($event)">
+      <input matInput placeholder="Search json" [ngModel]="search | async" (ngModelChange)="searchData($event)" [disabled]="!fetchedData">
     </mat-form-field>
   </div>
 
 
   @if (fetchedData && fetchedData.mappedData && fetchedData.sourceData) {
 
-    <mat-grid-list cols="2" rowHeight="1000" gutterSize="35">
-      <mat-grid-tile colspan="1" rowspan="1">
-        <mat-card class="data-card">
-          <mat-card-header>
-            <mat-card-title>Source Data</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
 
-            <app-json-viewer [json]="fetchedData.sourceData" [filter]="filter" [search]="search"></app-json-viewer>
-          </mat-card-content>
-        </mat-card>
-      </mat-grid-tile>
-      <mat-grid-tile colspan="1" rowspan="1">
-        <mat-card class="data-card">
-          <mat-card-header>
-            <mat-card-title>Mapped Data</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <app-json-viewer [json]="fetchedData.mappedData" [filter]="filter" [search]="search"></app-json-viewer>
-          </mat-card-content>
-        </mat-card>
-      </mat-grid-tile>
-    </mat-grid-list>
+    <div class="card-wrapper">
+      <mat-card class="debug-card">
+        <mat-card-header>
+          <mat-card-title>Source Data</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <app-json-viewer [json]="fetchedData.sourceData" [filter]="filter" [search]="search"></app-json-viewer>
+        </mat-card-content>
+      </mat-card>
+      <mat-card class="debug-card">
+        <mat-card-header>
+          <mat-card-title>Mapped Data</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <app-json-viewer [json]="fetchedData.mappedData" [filter]="filter" [search]="search"></app-json-viewer>
+        </mat-card-content>
+      </mat-card>
+    </div>
   }
 </div>
