Make sure json viewer is reactive to new fetched data.

--- a/src/app/pages/debug/debug.component.html
+++ b/src/app/pages/debug/debug.component.html
@@ -14,7 +14,7 @@
   </div>
 
 
-  @if (fetchedData && fetchedData.mappedData && fetchedData.sourceData) {
+  @if (fetchedData && fetchedData.mappedData() !== '' && fetchedData.sourceData() !== '') {
 
 
     <div class="card-wrapper">
